--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -32,8 +32,8 @@
 			<div id="title_left"></div>
 			<h1 id="title" class="mui-title"></h1>
 			<div id="random_icon">
-				<a id="add" class="mui-icon iconfont icon-jiahao mui-pull-right" style="font-size: 15px;margin-top: 5px;margin-right: -5px;"></a>
-				<h1 id="title" class="mui-title">云盘</h1>
+				<!--<a id="add" class="mui-icon iconfont icon-jiahao mui-pull-right" style="font-size: 15px;margin-top: 5px;margin-right: -5px;"></a>-->
+				<h1 id="title" class="mui-title"></h1>
 			</div>
 
 		</header>
