更改各种样式 和求知等待框

--- a/JiaoBaoYun-hb/html/quan/edit-remark.html
+++ b/JiaoBaoYun-hb/html/quan/edit-remark.html
@@ -10,7 +10,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<style>
-			html {
+			html,.mui-content {
 				background-color: white;
 			}
 			
