--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
@@ -36,8 +36,8 @@
 			</h1>
 		</header>
 		<div class="mui-content" style="z-index:0;">
-			<div class="mui-scroll-wrapper mui-fullscreen" id="history_container">
-				<div class="mui-scroll">
+			<div class="mui-fullscreen" id="history_container">
+				<div>
 					<ul class="mui-table-view">
 						<!--<li class="mui-table-view-cell">
 							<a>
